--- a/tastaturDemo.html
+++ b/tastaturDemo.html
@@ -51,6 +51,12 @@
                 { code: '', edit: true },
                 { code: '}' },
             ],
+            booleanExpressions: [
+                'false',
+                'true',
+                'gå()',
+                'erVedUtgang()',
+            ],
         };
 
         // view
