--- a/tastaturDemo.html
+++ b/tastaturDemo.html
@@ -20,6 +20,9 @@
 
         button {
             font-size: 3.5vmin;
+            line-height: 4.5vmin;
+            margin: 0.2vmin;
+            min-width: 6vmin;
         }
 
         .selected {
