--- a/tastaturDemo2.html
+++ b/tastaturDemo2.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <code-editor></code-editor>
+    <maze-canvas size="3"></maze-canvas>
+    <!-- <code-editor></code-editor> -->
 
     <script src="js/codeEditor.js"></script>
+    <script src="js/maze.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
