--- a/tastaturDemo2.html
+++ b/tastaturDemo2.html
@@ -11,7 +11,7 @@
     <!-- <code-editor></code-editor> -->
 
     <script src="js/codeEditor.js"></script>
-    <script src="js/maze.js"></script>
+    <script src="js/maze-canvas.js"></script>
     <script>
         const maze = document.getElementsByTagName('maze-canvas')[0];
 
