--- a/tastaturDemo2.html
+++ b/tastaturDemo2.html
@@ -10,6 +10,7 @@
 
 <body>
     <maze-canvas size="3"></maze-canvas>
+    <h1>Innebygde kommandoer</h1>
     <maze-commands></maze-commands>
     <!-- <code-editor></code-editor> -->
 
