--- a/tastaturDemo2.html
+++ b/tastaturDemo2.html
@@ -12,11 +12,14 @@
     <maze-canvas size="3"></maze-canvas>
     <h1>Innebygde kommandoer</h1>
     <maze-commands></maze-commands>
+    <h1>Egne kommandoer</h1>
+    <maze-custom-commands></maze-custom-commands>
     <!-- <code-editor></code-editor> -->
 
     <script src="js/codeEditor.js"></script>
     <script src="js/maze-canvas.js"></script>
     <script src="js/maze-commands.js"></script>
+    <script src="js/maze-custom-commands.js"></script>
     <script>
         const mazeCanvas = document.getElementsByTagName('maze-canvas')[0];
         const mazeCommands = document.getElementsByTagName('maze-commands')[0];
