--- a/labyrintMedKnapper.html
+++ b/labyrintMedKnapper.html
@@ -3,173 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labyrint</title>
-    <link rel="stylesheet" href="css/labyrint.css" />
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="page">
-        <div><canvas id="myCanvas"></canvas></div>
-        <div id="panel"></div>
-    </div>
-    <script src="js/labyrinth.js"></script>
+    <maze-canvas size="3"></maze-canvas>
+    <h1>Innebygde kommandoer</h1>
+    <maze-commands></maze-commands>
+    <h1>Egne kommandoer</h1>
+    <maze-custom-commands></maze-custom-commands>
+    <!-- <code-editor></code-editor> -->
+
     <script src="js/codeEditor.js"></script>
+    <script src="js/maze-canvas.js"></script>
+    <script src="js/maze-commands.js"></script>
+    <script src="js/maze-custom-commands.js"></script>
     <script>
-        localInit();
-
-        function localInit() {
-            init(3);
-            const model = globals.model;
-            model.customCommands = [
-                // {
-                //     name: 'Snu venstre',
-                //     codeName: 'snuVenstre',
-                //     code: '',
-                // },
-            ];
-            updateView();
-        }
-
-        function run(code) {
-            const model = globals.model;
-            model.lastCommand = { code };
-            model.lastCommand.returnValue = quotify(eval(code));
-            updateView();
-        }
-
-        function quotify(value) {
-            return typeof (value) === 'string' ? `'${value}'` : value;
-        }
-
-        function updateView() {
-            const model = globals.model;
-            document.getElementById('panel').innerHTML = `
-                <h1>Innebygde kommandoer</h1>
-                <button class="command" onclick="run('gå()')">Gå</button>
-                <button class="command" onclick="run('snuHøyre()')">Snu høyre</button>
-                <button class="command" onclick="run('erVedUtgang()')">Er ved utgang?</button>
-                <br/>
-                ${createLastCodeHtml(
-                model.lastCommand ? model.lastCommand.code : '',
-                model.lastCommand ? model.lastCommand.returnValue : '')}
-                <h1>Egne kommandoer</h1>
-                <div class="customCommands">
-                    ${model.customCommands.map(createCustomCommandHtml).join('')}
-                    <div class="customCommand" style="align-self: stretch">
-                        <div style="display: flex; align-items: center; height: 100%">
-                            <button onclick="addCustomCommand()" class="nonCommand">+</button>
-                        </div>
-                    </div>
-                </div>
-            `;
-            if (model.requestFocus) {
-                const inputTag = document.getElementById(model.requestFocus.name);
-                inputTag.focus();
-                inputTag.setSelectionRange(model.requestFocus.selectionStart, model.requestFocus.selectionEnd);
-                model.requestFocus = null;
-            }
-        }
-
-        function createCustomCommandHtml(customCommand, index) {
-            const isInEditMode = globals.model.customCommands[index].isInEditMode;
-            const preHtml = isInEditMode ? '' : `
-                <button 
-                    class="command" 
-                    onclick="runCustomCommand('${customCommand.codeName}')"
-                    >
-                    ${customCommand.name}
-                </button>            
-            `;
-            const postHtml = isInEditMode ? `
-                <button onclick="editCustomCommand(${index}, false)">Avslutt redigering</button>
-                `: `
-                <button onclick="editCustomCommand(${index}, true)">Rediger</button>
-                <button onclick="deleteCustomCommand(${index})">Slett</button>
-                `;
-
-            return `
-                <div class="customCommand">
-                    ${preHtml}                    
-                    ${createJavaScriptFunction(customCommand)}
-                    ${postHtml}
-                </div>
-                `;
-        }
-
-        function createJavaScriptFunction(customCommand) {
-            if (customCommand.isInEditMode) {
-                return `<code-editor name="${customCommand.name}"></code-editor>`;
-            }
-
-            const buttonFunc = (labelTxt, onclick, index, defaultTxt) => customCommand.isInEditMode
-                ? `<button onclick="${onclick}Command(${index})">${labelTxt}</button>\n`
-                : defaultTxt || '';
-
-            return `<pre>${customCommand.code}</pre>`;
-        }
-
-        function createLastCodeHtml(command, returnValue) {
-            return `<div class="code">
-                        <span style="color: gray">Kommando: &nbsp;</span>
-                        ${command}
-                        <br/>
-                        <span style="color: gray">Returverdi: </span>${returnValue}
-                    </div>
-                `;
-        }
-
-        // controller
-        function addCustomCommand() {
-            globals.model.customCommands.push({
-                name: 'Min funksjon',
-                codeName: 'minFunksjon',
-                code: 'function minFunksjon() {\n\n}\n',
-            });
-            updateView();
-        }
-
-        function editCustomCommand(index, isInEditMode) {
-            const customCommand = globals.model.customCommands[index];
-            customCommand.isInEditMode = isInEditMode;
-            if (!isInEditMode) {
-                const editor = document.getElementsByTagName('code-editor')[0];
-                customCommand.code = editor.getFunctionCode(true);
-                customCommand.codeName = editor.model.codeName;
-                customCommand.name = editor.model.name;
-            }
-            updateView();
-        }
-
-        function deleteCustomCommand(index) {
-            globals.model.customCommands.splice(index, 1);
-            updateView();
-        }
-
-        function editCommandName(inputTag, index) {
-            const customCommand = globals.model.customCommands[index];
-            customCommand.name = inputTag.value;
-            customCommand.codeName = toCamelCase(inputTag.value);
-            globals.model.requestFocus = {
-                name: inputTag.id,
-                selectionStart: inputTag.selectionStart,
-                selectionEnd: inputTag.selectionEnd,
-            };
-            updateView();
-        }
-
-        function toCamelCase(str) {
-            return str.split(' ').map(function (word, index) {
-                return index == 0 ? word.toLowerCase() : word.charAt(0).toUpperCase() + word.slice(1).toLowerCase();
-            }).join('');
-        }
-
-        function runCustomCommand(commandCodeName){
-            const command = globals.model.customCommands.find(c=>c.codeName==commandCodeName);
-            if(!command)return;
-            eval(command.code);
-            eval(commandCodeName+'()');
-        }
+        const mazeCanvas = document.getElementsByTagName('maze-canvas')[0];
+        const mazeCommands = document.getElementsByTagName('maze-commands')[0];
+        const mazeCustomCommands = document.getElementsByTagName('maze-custom-commands')[0];
+        const gå = mazeCanvas.gå.bind(mazeCanvas);
+        const snuHøyre = mazeCanvas.snuHøyre.bind(mazeCanvas);
+        const erVedUtgang = mazeCanvas.erVedUtgang.bind(mazeCanvas);
+        mazeCommands.onclick = code => eval(code);
+        mazeCustomCommands.onclick = code => eval(code);
     </script>
 </body>
 
