--- a/labyrintMedKnapper.html
+++ b/labyrintMedKnapper.html
@@ -6,14 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #page{
+            display: flex;
+        }
+    </style>
 </head>
 
 <body>
-    <maze-canvas size="3"></maze-canvas>
-    <h1>Innebygde kommandoer</h1>
-    <maze-commands></maze-commands>
-    <h1>Egne kommandoer</h1>
-    <maze-custom-commands></maze-custom-commands>
+    <div id="page">
+        <div>
+            <maze-canvas size="3"></maze-canvas>
+        </div>
+        <div>
+            <h1>Innebygde kommandoer</h1>
+            <maze-commands></maze-commands>
+            <h1>Egne kommandoer</h1>
+            <maze-custom-commands></maze-custom-commands>
+        </div>
+    </div>
     <!-- <code-editor></code-editor> -->
 
     <script src="js/codeEditor.js"></script>
