--- a/terjescript.html
+++ b/terjescript.html
@@ -14,7 +14,7 @@
 
 <body>
     <button onclick="terjeScript.run()">Run</button>
-    <terjescript-editor></terjescript-editor>
+    <terjescript-editor data-program-index="0"></terjescript-editor>
     <terjescript-canvas></terjescript-canvas>
     <script>
         const terjeScript = new TerjeScript();
