--- a/simpleCanvas.html
+++ b/simpleCanvas.html
@@ -6,7 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript platform game</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        body {
+            background: black;
+        }
+
+        #gameCanvas {
+            background: #2c2c81;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border: 5px solid white;
+        }
+    </style>
 </head>
 
 <body>
