--- a/interaktivjs/animasjon3.html
+++ b/interaktivjs/animasjon3.html
@@ -28,7 +28,7 @@
         const canvasHøyde = canvas.height = 540;
         const figurBredde = 30;
         const figurHøyde = 30;
-        const gravitasjon = 0.1;
+        const gravitasjon = 1;
 
         x = 10;
         y = 50;
@@ -42,12 +42,13 @@
             ctx.clearRect(0, 0, canvasBredde, canvasHøyde)
             x = x + retningX
             y = y + retningY
-            retningY += gravitasjon;
             if (x > canvasBredde - figurBredde || x < 0) {
                 retningX = -retningX;
             }
             if (y > canvasHøyde - figurHøyde) {
                 retningY = -retningY;
+            } else {
+                retningY += gravitasjon;
             }
             ctx.fillRect(x, y, figurBredde, figurHøyde)
             requestAnimationFrame(animer)
