--- a/interaktivjs/animasjon1.html
+++ b/interaktivjs/animasjon1.html
@@ -29,7 +29,7 @@
         const figurBredde = 30;
         const figurHøyde = 30;
 
-        x = 10;
+        let x = 10;
         ctx.fillStyle = 'green';
 
         animer();
