--- a/interaktivjs/animasjon3.html
+++ b/interaktivjs/animasjon3.html
@@ -28,27 +28,26 @@
         const canvasHøyde = canvas.height = 540;
         const figurBredde = 30;
         const figurHøyde = 30;
+
         const gravitasjon = 1;
-
-        x = 10;
-        y = 50;
-        retningX = 2;
-        retningY = 0;
+        let x = 10;
+        let y = 50;
+        let fartX = 2;
+        let fartY = 0;
         ctx.fillStyle = 'green';
-
 
         animer();
         function animer() {
             ctx.clearRect(0, 0, canvasBredde, canvasHøyde)
-            x = x + retningX
-            y = y + retningY
+            x = x + fartX
+            y = y + fartY
             if (x > canvasBredde - figurBredde || x < 0) {
-                retningX = -retningX;
+                fartX = -fartX;
             }
             if (y > canvasHøyde - figurHøyde) {
-                retningY = -retningY;
+                fartY = -fartY;
             } else {
-                retningY += gravitasjon;
+                fartY += gravitasjon;
             }
             ctx.fillRect(x, y, figurBredde, figurHøyde)
             requestAnimationFrame(animer)
