--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -6,38 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript platform game</title>
-    <style>
-        #gameCanvas {
-            background: darkgray;
-        }
-
-        /* .page {
-            display: flex;
-        }
-
-        .col {
-            width: calc(50% - 2em);
-            margin: 1em;
-        } */
-    </style>
 </head>
 
 <body>
-    <h1>Eksempel nivå 1</h1>
+    <div style="float:right; padding: 1em">
+        <h2>Tegneområde</h2>
+        <canvas id="gameCanvas" style="background: darkgray"></canvas>
+    </div>
 
-    <!-- <div class="page">
-        <div class="col" style="min-width: 400px;">
-            <h2>Tegneområde</h2>
-            <canvas id="gameCanvas"></canvas>
-        </div>
-        <div class="col">
-            <h2>Instruksjon</h2>
-            <p>
-                Det grå området rett under dette avsnittet er et tegneområde som du skal tegne på ved å kjøre og lage
-                JavaScript-kommandoer fra det såkalte konsollet. Dette er beskrevet videre under tegneområdet.
-            </p>
-        </div>
-    </div> -->
+    <h1>Eksempel nivå 1</h1>
+    <p>
+        Det grå området til høyre er et tegneområdet som du skal tegne på ved å kjøre og lage
+        JavaScript-kommandoer fra det såkalte konsollet.
+    </p>
+    <h2>Slik kjører du JavaScript-kommandoer fra konsollet</h2>
+    <ol>
+        <li>Dette fungerer på tilsvarende måte i alle nettlesere, men denne oppskriften forutsetter at du bruker
+            nettleseren Google Chrome. Trykk <b>F12</b>
+            for å åpne utviklerverktøy og velg så fanen <b>Console</b>.
+        </li>
+        <li>I konsollet skriver du kommandoen <tt>draw('red')</tt> og trykker <b>enter</b>.
+            Da skal du få tegnet en rød firkant. <a href="javascript:toggle('console')">Trykk her for å få se omtrent
+                hvordan det skal se ut (og igjen for å skjule)</a>. <br />
+            <img id="console" src="img/console.png" style="width: 50%; display: none;" />
+        </li>
+        <li>Eksperimenter videre ved å kalle denne kommandoen flere ganger, men bytt ut <tt>red</tt> med en annen farge.
+            Noen andre gyldige fargenavn er:
+            <tt>white</tt>, <tt>silver</tt>, <tt>gray</tt>, <tt>black</tt>, <tt>maroon</tt>, <tt>yellow</tt>,
+            <tt>olive</tt>, <tt>lime</tt>, <tt>green</tt>,
+            <tt>aqua</tt>, <tt>teal</tt>, <tt>blue</tt>, <tt>navy</tt>, <tt>fuchsia</tt> og <tt>purple</tt>. For de
+            fleste farger kan du også legge til enten <tt>dark</tt>
+            eller <tt>light</tt> først, som for eksempel <tt>darkblue</tt> og <tt>lightblue</tt>.
+        </li>
+    </ol>
+
     <script>
         const gameCanvas = document.getElementById('gameCanvas');
         const canvas = gameCanvas.getContext('2d');
@@ -55,6 +57,11 @@
             canvas.fillStyle = color;
             canvas.fillRect(x, y, width, height);
             index++;
+        }
+
+        function toggle(id) {
+            const elementStyle = document.getElementById(id).style;
+            elementStyle.display = elementStyle.display == 'none' ? 'block' : 'none';
         }
     </script>
 </body>
